<resources>
    <string name="app_name">AppViralityUI</string>

    <!--<string name="appvirality_growth_title">Referrals</string>
    <string name="appvirality_growth_title_text">Referrals Title</string>
    <string name="appvirality_growth_desc">Your friend had referred you. please login to claim it.</string>
    <string name="appvirality_growth_link">www.r.appvirality.com/df/5</string>
    <string name="appvirality_growth_seemore">Show More</string>
    <string name="appvirality_growth_code"></string>
    <string name="appvirality_user_settings_terms">Terms and Conditions</string>-->
    <string name="appvirality_growth_link_title">Your personal referral Link:</string>
    <string name="appvirality_or_label">OR</string>

    <string name="appvirality_welcome_title">You\'ve been invited!</string>
    <string name="appvirality_welcome_ref_code">Enter Referral Code</string>
    <!--<string name="appvirality_welcome_desc">{{username}} has given you Reward $15</string>-->
    <string name="appvirality_welcome_sign_up">Sign Up</string>
    <string name="appvirality_welcome_referral_code">Referral code, if you have</string>
    <string name="appvirality_welcome_email">Enter your email address</string>
    <string name="appvirality_welcome_claim">Claim It</string>
    <string name="appvirality_welcome_skip">Skip</string>
    <string name="appvirality_welcome_submit">Submit</string>

    <string name="total_earnings_label">Total Earnings</string>
    <string name="claimed_label">Claimed</string>
    <string name="on_hold_label">On Hold</string>
    <string name="earnings_label">Earnings</string>
    <string name="personal_url_label">Your personal referral code</string>
    <string name="set_name_label">set name</string>
    <string name="save_label">Save</string>
    <string name="share_url_label">shareUrl/</string>
    <string name="your_friends_label">Your Friends</string>
    <string name="my_coupons_label">My Coupons</string>
    <string name="no_earnings_label">Oops, You don’t have any earnings yet!</string>
    <string name="no_coupon_pool">Oops, No coupons are available!</string>
    <string name="no_coupons_label">Oops, You don’t have any coupons yet!</string>
    <string name="no_friends_label">Oops, You don’t have any friends yet!</string>

    <string name="appvirality_no_network_message">Sorry.! Network unavailable, please check your internet connection and try again</string>
    <string name="appvirality_btn_reload">Reload</string>
    <string name="select_from_coupon_pool">Select a coupon</string>

    <string name="appvirality_launch_remind_later">Remind Later</string>
    <string name="appvirality_launch_refer">Refer</string>
    <string name="appvirality_launch_msg">Refer your friend and earn $5.</string>

    <string name="gh_toolbar_title">REFER &amp; EARN</string>
    <string name="gh_toolbar_terms">T&amp;C</string>

    <string name="progress_layout_id">Progress Layout Id</string>
    <string name="network_error_layout_id">Network Error Layout Id</string>
    <string name="network_error_reload_btn_id">Network Error Reload Button Id</string>
    <string name="no_data_text_view_id">No Data Text View Id</string>

    <string name="search_contacts_hint">Search Contacts</string>
    <string name="custom_impl_tag">Custom Impl Tag</string>

</resources>
