<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rect_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect_gray_up_round"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="#333"
        android:text="Word Of Mouth Earnings" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/total_earnings_label"
                android:textColor="#666" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#666"
                android:text=":" />

            <TextView
                android:id="@+id/tv_total_earnings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textColor="#666" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d6d6d6" />

        <TableRow android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/claimed_label"
                android:textColor="#666" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#666"
                android:text=":" />

            <TextView
                android:id="@+id/tv_claimed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textColor="#666" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d6d6d6" />

        <TableRow android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/on_hold_label"
                android:textColor="#666" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#666"
                android:text=":" />

            <TextView
                android:id="@+id/tv_on_hold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textColor="#666" />
        </TableRow>

        <TableRow
            android:id="@+id/appvirality_row_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#ffffff"
            android:paddingLeft="15dp"
            android:visibility="gone">

        <TextView
            android:id="@+id/appvirality_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:textColor="#666" />
        </TableRow>

    </TableLayout>

</LinearLayout>